All_Component_DX/force-app/main/default/objects/SM_IB_Attributes_History__c/SM_IB_Attributes_History__c.object-meta.xml
<CustomObject>
    <description>Object to record attributes payload as JSON for an Installed Product. Latest record (if available) is used in ProductIQ client for view/edit/create</description>
    <label>IB Attributes History</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>IB Attributes History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IB Attributes History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>