All_Component_DX/force-app/main/default/objects/SM_IB_Attributes_History__c/fields/SM_Attr_Payload__c.field-meta.xml
<CustomField>
    <fullName>SM_Attr_Payload__c</fullName>
    <description>Attributes as JSON with data generated in the structure defined as part of associated IB’s product template</description>
    <label>Attr Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>