All_Component_DX/force-app/main/default/objects/SM_IB_Attributes_History__c/fields/SM_Attr_Type__c.field-meta.xml
<CustomField>
    <fullName>SM_Attr_Type__c</fullName>
    <description>Indicates which group/category the attributes belong to. Picklist values include CONFIG, TECHNICAL</description>
    <label>Attr Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TECHNICAL</fullName>
            </value>
            <value>
                <fullName>CONFIG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>