All_Component_DX/force-app/main/default/objects/SM_IB_Attributes_History__c/fields/SM_Captured_By__c.field-meta.xml
<CustomField>
    <fullName>SM_Captured_By__c</fullName>
    <description>User / Technician, System, APP-Name</description>
    <label>Captured By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>