All_Component_DX/force-app/main/default/objects/SM_IB_Attributes_History__c/fields/SM_Instance_Template_Id__c.field-meta.xml
<CustomField>
    <fullName>SM_Instance_Template_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>IB_Attributes_Template_Instance -- instance_template_id</description>
    <label>Instance Template Id</label>
    <referenceTo>SM_IB_Attributes_Template_Instance__c</referenceTo>
    <relationshipLabel>IB Attributes Historys</relationshipLabel>
    <relationshipName>IB_Attributes_Historys</relationshipName>
    <type>Lookup</type>
</CustomField>