All_Component_DX/force-app/main/default/objects/SM_IB_Attributes_History__c/fields/SM_Source__c.field-meta.xml
<CustomField>
    <fullName>SM_Source__c</fullName>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>